# graphRAG-pipeline

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  COMMANDS.md  GraphRAG_v1.0.py  LICENSE  README.md  generate_questions.py  gold_entity_eval_protocol.md  gold_original_from_collega_20260716.json  kg_evaluator.py  kg_report_2.json  kg_report_3.json  kg_report_4.json  kg_report_5.json  kg_report_6.json  kg_report_7.json  kg_report_8.json  output.txt  pipeline.out  pyproject.toml  questions.txt  questions_matrix_long.txt  questions_test_strategies.txt  requirements-cpu.txt  requirements-gpu.txt  requirements.txt  ruff_output.txt
.github/: copilot-instructions.md
docs/: cluster.md  paper_reporting.md
evaluation/: README.md  build_eval_dataset.py  gold_questions_template.csv  requirements.txt  retrieval_metrics.py  run_ragas_eval.py
kg_pipeline/: __init__.py  config.yaml  main.py  requirements.txt
scripts/: analyze_experiments.py  analyze_human_eval.py  analyze_matrix.py  analyze_resource_usage.py  demo_app.py  evaluate_matrix_quality.py  generate_questions.py  kg_collapse_aliases.py  kg_search_index.py  preflight.ps1  prepare_human_eval_sample.py  provenance_precision.py  run_ab_fast_profile.py  run_experiment_matrix_gpu.sbatch  run_graphrag.sbatch  run_graphrag_cpu.sbatch  run_kg_pipeline.sbatch  run_large_matrix_with_live_log.sh  run_pipeline_smoke_full.py  run_retrieval_matrix.py  smoke_check.py  smoke_dense_rag.py  smoke_kg_retriever.py  smoke_test_pipeline.py  smoke_text_rag.py  submit_matrix_from_env.sh  visualize_kg.py
tests/: conftest.py  test_inference.py  (+1 more)
(+102 files in other folders)
