[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphrag-pipeline"
version = "0.1.0"
description = "GraphRAG pipeline with Neo4j retrieval and local Hugging Face generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "langchain-community",
    "langchain-neo4j",
    "langchain-huggingface",
    "langchain-core",
    "langgraph",
    "transformers",
    "accelerate",
    "neo4j",
    "python-dotenv",
]

[project.optional-dependencies]
gpu = [
    "bitsandbytes",
]

[project.scripts]
graphrag-demo = "graphrag.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
